<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="employeeViewModel"
            type="org.vnuk.usermbs.viewmodel.EmployeeViewModel" />
    </data>

    <LinearLayout style="@style/LinearLayoutMainElementStyle">

        <LinearLayout style="@style/LinearLayoutElementStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/first_name" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="12"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName"
                android:text="@={employeeViewModel.firstName}" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutElementStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last_name" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="12"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"
                android:text="@={employeeViewModel.lastName}" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutElementStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/code" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_code"
                android:inputType="textPersonName"
                android:text="@={employeeViewModel.code}" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutElementStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/city" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_city"
                android:inputType="textPersonName"
                android:text="@={employeeViewModel.city}" />
        </LinearLayout>

        <TextView
            style="@style/TextViewErrorStyle"
            android:text="@{employeeViewModel.error}"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()-> employeeViewModel.onNewEmployeeClick()}"
            android:text="@string/new_employee" />
    </LinearLayout>
</layout>