<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayoutMainElementStyle"
    tools:context=".ui.view.activity.UserPanelActivity">

    <TextView
        android:id="@+id/tv_user_panel_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/element_padding"
        android:textSize="@dimen/text_title"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_new_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/element_padding"
        android:text="@string/new_employee" />

    <Button
        android:id="@+id/btn_new_buyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/element_padding"
        android:text="@string/new_buyer" />

    <Button
        android:id="@+id/btn_view_buyers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/element_padding"
        android:text="@string/view_buyers" />

    <Button
        android:id="@+id/btn_view_applicants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_applicants" />
</LinearLayout>